--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lockr": "^0.9.0-beta.2",
     "lodash": "4.17.21",
     "md5": "^2.3.0",
+    "nostr-tools": "^1.14.0",
     "qrcode.react": "^3.1.0",
     "rc-slider": "9.7.5",
     "react": "^18.2.0",
