--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.0.5",
     "@davatar/react": "1.8.1",
     "@ethersproject/providers": "5.5.1",
     "@ethersproject/units": "5.5.0",
@@ -23,12 +24,14 @@
     "await-to-js": "^3.0.0",
     "axios": "^1.3.4",
     "bignumber.js": "^9.1.1",
+    "bitcoinjs-lib": "^6.1.5",
     "buffer": "^6.0.3",
     "classnames": "2.3.1",
     "date-fns": "2.27.0",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
+    "ecpair": "^2.1.0",
     "ethers": "5.6.8",
     "framer-motion": "4.1.17",
     "graphql": "^16.6.0",
@@ -50,9 +53,11 @@
     "react-slick": "^0.29.0",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1",
+    "stream-browserify": "^3.0.0",
     "urql": "^4.0.0",
     "viem": "^0.3.19",
-    "wagmi": "^1.0.5"
+    "wagmi": "^1.0.5",
+    "wasm-module-webpack-plugin": "^3.0.0"
   },
   "resolutions": {
     "react-error-overlay": "6.0.11"
