feat：mint assets

--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ REACT_APP_NOSTR_TOKEN_SEND_TO=npub1j86yct7kp5zrn2mq8jjsrxt0ak69kqr8u9gywpux3d0pl
 REACT_APP_API_GraphQL_URL=https://dev-nostrgraph.unift.xyz/api/graph_data
 REACT_APP_USDT_CONTRACT_ADDR=0xfad6367E97217cC51b4cd838Cc086831f81d38C2
 REACT_APP_CURRENT_ENV=prod
+REACT_APP_TX=https://mempool.space/tx/
+REACT_APP_LIGHTNING=universe.lightning.finance
 PORT=3011 
