--- a/.env.test
+++ b/.env.test
@@ -7,4 +7,6 @@ REACT_APP_USDT_CONTRACT_ADDR=0xfad6367E97217cC51b4cd838Cc086831f81d38C2
 REACT_APP_BTC_SEND_TO_ADDR=bc1qzrgykyfuyredsgkw3zu4zkplkyxuv4na6mstp5
 REACT_APP_CURRENT_ENV=test
 REACT_APP_GRAPH_BASE="test_"
+REACT_APP_TX=https://mempool.space/testnet/tx/
+REACT_APP_LIGHTNING=testnet.universe.lightning.finance
 PORT=3012
