--- a/.env.prod
+++ b/.env.prod
@@ -7,4 +7,6 @@ REACT_APP_USDT_CONTRACT_ADDR=0xfad6367E97217cC51b4cd838Cc086831f81d38C2
 REACT_APP_BTC_SEND_TO_ADDR=bc1qzrgykyfuyredsgkw3zu4zkplkyxuv4na6mstp5
 REACT_APP_CURRENT_ENV=prod
 REACT_APP_GRAPH_BASE=""
+REACT_APP_TX=https://mempool.space/tx/
+REACT_APP_LIGHTNING=universe.lightning.finance
 PORT=3013
