--- a/.env.development
+++ b/.env.development
@@ -9,4 +9,5 @@ REACT_APP_CURRENT_ENV=dev
 REACT_APP_GRAPH_BASE="dev_"
 REACT_APP_TX=https://mempool.space/testnet/tx/
 REACT_APP_LIGHTNING=testnet.universe.lightning.finance
+REACT_APP_MEMOPOOL=https://mempool.space/testnet 
 PORT=3011
