--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "await-to-js": "^3.0.0",
     "axios": "^1.3.4",
     "bignumber.js": "^9.1.1",
+    "bitcoin-address-validation": "^2.2.3",
     "bitcoinjs-lib": "^6.1.5",
     "buffer": "^6.0.3",
     "classnames": "2.3.1",
@@ -50,6 +51,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
+    "react-share": "4.4.1",
     "react-slick": "^0.29.0",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1",
@@ -57,8 +59,7 @@
     "urql": "^4.0.0",
     "viem": "^0.3.19",
     "wagmi": "^1.0.5",
-    "wasm-module-webpack-plugin": "^3.0.0",
-    "react-share": "4.4.1"
+    "wasm-module-webpack-plugin": "^3.0.0"
   },
   "resolutions": {
     "react-error-overlay": "6.0.11"
