--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rc-slider": "9.7.5",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-error-overlay": "6.0.11",
     "react-helmet": "6.1.0",
     "react-icons": "4.3.1",
